Complete JDK 17 and Spring Boot 3.x migration with all code modernization
Co-authored-by: mishravivek-ms <122555774+mishravivek-ms@users.noreply.github.com>